--- a/crates/symgraph-discovery/Cargo.toml
+++ b/crates/symgraph-discovery/Cargo.toml
@@ -10,3 +10,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 walkdir = "2"
 regex = "1"
+
+[dev-dependencies]
+tempfile = "3"
