feat: improve Rust workspace support and add automatic LSIF generation
- Fix scan-rust command to handle workspace projects correctly
  - Process all workspace members instead of only root package
  - Open database once for all packages
  - Parse LSIF file once for entire workspace

- Add automatic LSIF file generation
  - Generate LSIF using rust-analyzer if file not found
  - Show clear error messages if rust-analyzer is unavailable
  - Continue with source code analysis if LSIF generation fails

- Improve error handling
  - Convert LSIF errors to warnings with informative messages
  - Allow command to continue even if LSIF parsing fails

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 Cargo.lock
 
-/**/target
+target/
+target-rust-analyzer/
 index_libs.db
+compile_commands.json
+mydatabase.db
+project.lsif
+sources.json
+sources.txt
