feat: Comprehensive Rust workspace analysis with unified GUI
Complete overhaul of Symgraph focusing on comprehensive Rust workspace analysis:

## Core Features
- Full workspace member processing using cargo_metadata instead of manual TOML parsing
- Enhanced symbol extraction covering functions, structs, enums, modules, traits, and impl blocks
- Unified Tkinter GUI with integrated Flask web viewer for seamless user experience
- Smart project detection with automatic database management
- Comprehensive workspace-level examples and tests scanning

## Technical Improvements
- Eliminated duplicate file entries in database through proper file handling
- Replaced fragile manual TOML parsing with reliable cargo_metadata library
- Fixed command line argument handling for Rust projects
- Added comprehensive test utilities for metadata analysis and debugging
- Improved error handling with detailed user feedback

## User Experience Enhancements
- Three-tab interface: Index Project, View Results, Settings
- Integrated web server eliminates need for external viewer
- Smart defaults for project and database paths
- Real-time indexing progress with detailed feedback
- Clean, modern interface with intuitive workflow

## Code Quality
- Removed deprecated functions and unused dependencies
- Consolidated multiple incremental improvements into cohesive solution
- Added comprehensive documentation and examples
- Improved overall code organization and maintainability

This represents a complete rewrite and consolidation of the entire development history
into a production-ready solution for comprehensive Rust workspace code analysis.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,15 @@ members = [
   "crates/symgraph-discovery",
   "crates/symgraph-cxx",
   "crates/symgraph-rust",
-  "crates/symgraph-models"
+  "crates/symgraph-models",
+  "crates/symgraph-scripts"
 ]
 resolver = "2"
+
+[profile.dev]
+opt-level = 0
+codegen-units = 512
+
+[profile.dev.package."*"]
+opt-level = 0
+debug = false
