--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
-Cargo.lock
-
+# Build artifacts
 target/
 target-rust-analyzer/
-index_libs.db
+
+# Generated files
 compile_commands.json
-mydatabase.db
 project.lsif
 sources.json
 sources.txt
+
+# Databases
+*.db
+!example.db
+
+# GUI settings
+explorer_settings.json
+enhanced_gui_settings.json
+
+# Editor/Tool cache
+.aider*
+.continue/
+.qodo/
+.vscode/
+
