Migrate from SQLite to Sled NoSQL database
- Replace rusqlite with sled embedded NoSQL key-value store
- Update data models for NoSQL-friendly storage with JSON serialization
- Add UUID support for unique identifiers
- Implement new database methods using key prefixes and scan operations
- Update all database operations from SQL to NoSQL patterns
- Maintain backward compatibility through type aliases
- Remove unused symgraph-scripts dependency

This migration provides better performance for graph-based symbol data
structure while preserving all existing functionality.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ members = [
   "crates/symgraph-cxx",
   "crates/symgraph-rust",
   "crates/symgraph-models",
-  "crates/symgraph-scripts"
+  "test_scip_project"
 ]
 resolver = "2"
 
