--- a/crates/symgraph-core/Cargo.toml
+++ b/crates/symgraph-core/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1"
-rusqlite = { version = "0.31", features = ["bundled"] }
+sled = "0.34"
 serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+uuid = { version = "1.0", features = ["v4"] }
+chrono = { version = "0.4", features = ["serde"] }
+log = "0.4"
