--- a/crates/symgraph-discovery/Cargo.toml
+++ b/crates/symgraph-discovery/Cargo.toml
@@ -8,8 +8,8 @@ edition = "2021"
 anyhow = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-walkdir = "2"
 regex = "1"
+log = "0.4"
 
 [dev-dependencies]
 tempfile = "3"
