--- a/unified_gui_settings.json
+++ b/unified_gui_settings.json
@@ -1,6 +1,6 @@
 {
-  "last_project_dir": "D:/work/Projects/STL Desktop Tool/orthosis_mirror_app",
+  "last_project_dir": "D:/work/Projects/3d_Printing_Model_Adjustment/stl_printing_model_adjustment",
   "last_db_path": "D:/work/Projects/STL Desktop Tool/orthosis_mirror_app/orthosis_mirror_app.db",
-  "window_geometry": "1200x800+104+104",
+  "window_geometry": "1278x1408+1273+0",
   "auto_open_viewer": true
 }
