Fix Rust SCIP indexing to include all project files
- Replace single-file SCIP generation with per-file indexing
- Generate SCIP for each Rust file individually using rust-analyzer
- Process all .rs files in src/ directory (main.rs, mesh.rs, stl_editor_app.rs, stl_io.rs)
- Fix compilation errors and improve error handling
- Results: 13 symbols from 4 files vs previous 1 symbol from 1 file
- Clean up temporary SCIP files after processing

This resolves the issue where rust-analyzer SCIP only indexed main.rs
and missed all other modules in the project.

--- a/gui/unified_gui_settings.json
+++ b/gui/unified_gui_settings.json
@@ -1,5 +1,5 @@
 {
-  "last_project_dir": "D:/work/Projects/STL Desktop Tool/orthosis_mirror_app",
+  "last_project_dir": "D:/work/Projects/3d_Printing_Model_Adjustment/stl_printing_model_adjustment",
   "last_db_path": "D:/work/Projects/STL Desktop Tool/orthosis_mirror_app/orthosis_mirror_app.db",
   "window_geometry": "1200x800+208+208",
   "auto_open_viewer": true
